# langchain-course

./: .gitignore  pyproject.toml  requirements.txt
dataset/: movies.csv
notebooks/: quickstart.ipynb
notebooks/chains/: chains_exemplos.ipynb
notebooks/memory/: memory_exemplos.ipynb
notebooks/output_parsers/: output_parsers_exemplos.ipynb
notebooks/prompts/: example_selector.ipynb  prompts_example.ipynb
notebooks/rag_advanced/: retrievers.ipynb
notebooks/retrieval/: document_load.ipynb  retrievers.ipynb  text_embedding_models.ipynb  text_splitters.ipynb
