[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Ramon Medeiro <r.medeiro10@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_examples"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.9"
openai = "^1.12.0"
tiktoken = "^0.6.0"
langchain-openai = "^0.0.7"
python-dotenv = "^1.0.1"
langchain-google-genai = "^0.0.9"
sentence-transformers = "^2.5.1"
faiss-cpu = "^1.8.0"
pandas = "^2.2.1"
jq = "^1.6.0"
pypdf = "^4.1.0"
rapidocr-onnxruntime = "^1.3.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
